2006-08-27  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (DEEP_EQUAL_BUILTIN): New constant.
	(<init>): Define fn:deep-equal.
	(walkApplyExp): Map deep-equal to SequenceUtils.deepEqual.

2006-08-23  Per Bothner  <per@bothner.com>

	* XQuery.java (makeClassName): New static method.
	* XQParser.java (parse): Change handling of module declaration.
	Generated class name now depends on URI *and& makeClassName.
	Fix handling of module import to handle multiple modules, and handle
	'at' location "hint".

2006-08-23  Per Bothner  <per@bothner.com>

	* XQParser.java (parse): Set file/line on initializer
	of external variables.

	* XQParser.java (parse): Complain about zero-length namespace
	in module import.

2006-08-22  Per Bothner  <per@bothner.com>

	* XQuery.java (getCompilation): New method.
	(parse): Change interface, with passed-in Compilation.
	Merge existing and new expressions in passed-in ModuleExp.

2006-08-18  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (CURRENT_DATETIME_BUILTIN, CURRENT_DATE_BUILTIN,
	CURRENT_TIME_BUILTIN): New constants.
	(currentDateTimeDecl; currentDateDecl, currentTimeDecl): New fields.
	(resolveModule): New method generates code to initialize the above
	declarations.
	(walkApplyExp): Handle fn:current-dataTime, fn:current-date, and
	fn:current-time standard functions.

2006-08-17  Per Bothner  <per@bothner.com>

	* XQParser.java (parseItemType): The sementics of empty-sequence()
	don't really match those of Type.void_type.

	* XQParser.java (parseItemType): Emit error if unknown type.

	* XQParser.java (parseFLWRExpression): Also reset flworDeclsCount
	when done.

	* XQParser.java (parseUnaryExpr): Fix precedence by recursively
	calling parseUnaryExpr instead of parseUnionExpr.

2006-06-28  Per Bothner  <per@bothner.com>

	* XQParser.java: Update to use Symbol.makeUninterned.
	(parseNamedNodeType, parseQName): Use new ElementType.MATCH_ANY_QNAME.
	(parseNameTest): Cleaner handling of the any-namespace case.